# Cainiao-GreedRL

./: CMakeLists.txt  README.md  gitignore.txt  requirements.txt  setup.py
csrc/: common.h  pybind.cpp  task_group_priority.cpp  task_group_priority.cu  task_group_priority.h  task_group_split.cpp  task_group_split.cu  task_group_split.h
examples/: runner.py
examples/batching/: batching.py
examples/cvrp/: cvrp.py  orts.py  solve.py  train.py  utils.py
examples/dpdp/: dpdp.py
examples/pdptw/: pdptw.py
examples/sdvrp/: sdvrp.py  sdvrp.textClipping
examples/tsp/: tsp.py
examples/vrptw/: vrptw.py
greedrl/: __init__.py  agent.py  const.py  decode.py  dense.py  encode.py  feature.py  function.py  gitignore.txt  norm.py  pyenv.py  solver.py  utils.py  variable.py
test/: all_test.py  basetest.py  function_test.py  solver_test.py
